# tapioca

./: .gitignore  .travis.yml  Cargo.toml  LICENCE  README.md
examples/: httpbin.rs  test.rs  uber.rs
src/: auth.rs  lib.rs  query.rs  response.rs  schema.rs  traits.rs
src/datatype/: mod.rs
src/response/: body.rs  mod.rs  status.rs
tapioca-codegen/: Cargo.toml
tapioca-codegen/src/: lib.rs
tapioca-codegen/src/infer/: auth.rs  body.rs  datatype.rs  method.rs  mod.rs  params.rs  path.rs  query.rs  response.rs  schema.rs
tapioca-derive/: Cargo.toml
tapioca-derive/src/: infer.rs  lib.rs  parse.rs
tapioca-derive/src/infer/: datatype.rs  method.rs  mod.rs  parameter.rs  path.rs  query.rs  response.rs  schema.rs
tapioca-macro/: Cargo.toml
tapioca-macro/src/infer/: datatype.rs  mod.rs  path.rs  schema.rs
tapioca_macros/: Cargo.toml
tapioca_mir_plugin/: Cargo.toml
tests/: compilation.rs  schema.rs  status.rs
tests/compile-fail/: 400.rs  401.rs  404.rs  405.rs  410.rs  410b.rs
tests/run-pass/: 400.rs  401.rs  404.rs  405.rs  406.rs  410.rs  411.rs
tests/schemata/: httpbin.yml
tests/util/: Cargo.toml  lib.rs
