[package]
name = "tapioca"
version = "0.1.0"
authors = ["Oliver Ford <ojf13@imperial.ac.uk>"]

[lib]
name = "tapioca"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
clippy = {version="*", optional=true}
reqwest = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tapioca-codegen = {path="tapioca-codegen"}

[dev-dependencies]
compiletest_rs = "*"
