[package]
name = "tapioca"
version = "0.0.0"
authors = ["Oliver Ford <ojf13@imperial.ac.uk>"]
description = "Type-safe REST APIs via OAS"
repository = "https://github.com/OJFord/tapioca.git"
license-file = "LICENCE"

[lib]
name = "tapioca"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
clippy = {version="0.0", optional=true}
reqwest = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tapioca-codegen = {version="0", path="tapioca-codegen"}

[dev-dependencies]
compiletest_rs = "0.2"
