[package]
name = "tapioca-codegen"
version = "0.0.0"
authors = ["Oliver Ford <ojf13@imperial.ac.uk>"]
description = "Type-safe REST APIs via OAS"
repository = "https://github.com/OJFord/tapioca/tree/master/tapioca-codegen"
license = "MIT"
license-file = "../LICENCE"

[lib]
proc-macro = true

[dependencies]
Inflector = "0.10.0"
quote = "0.3"
regex = "0.2"
reqwest = "0.6"
syn = "0.11"
yaml-rust = "0.3"
