[package]
name = "tapioca-codegen"
version = "0.0.1"
authors = ["Oliver Ford <ojf13@imperial.ac.uk>"]
description = "Type-safe REST client using the OpenAPI Specification"
repository = "https://github.com/OJFord/tapioca/tree/master/tapioca-codegen"
license-file = "../LICENCE"

[lib]
proc-macro = true

[dependencies]
Inflector = "0.10.0"
quote = "0.3"
regex = "1.5.5"
reqwest = {version="0.9", features=["hyper-011"]}
syn = "0.11"
yaml-rust = "0.4.1"
