[package]
name = "tapioca-testutil"
version = "0.0.1"
authors = ["Oliver Ford <ojf13@imperial.ac.uk>"]
repository = "https://github.com/OJFord/tapioca.git"
license-file = "../../LICENCE"

[lib]
path = "lib.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dependencies.tapioca]
path = "../../"

[dependencies.tapioca-codegen]
path = "../../tapioca-codegen"
